src/objects/APTSJIRA_Integration__c/APTSJIRA_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>JIRA Integration</label>
</CustomObject>