src/objects/APTSJIRA_Integration__c/fields/Product_Code_DEV__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_DEV__c</fullName>
    <label>Product Code - DEV</label>
    <length>50</length>
    <type>Text</type>
</CustomField>