src/objects/APTSJIRA_Integration__c/fields/Product_Code_SUP__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_SUP__c</fullName>
    <label>Product Code - SUP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>