src/objects/APTSJIRA_Integration__c/fields/Product_Code_SUPFREE__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_SUPFREE__c</fullName>
    <label>Product Code - SUPFREE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>